public/css/main.css
/* ... */
.filter .reset a:hover {
  text-decoration: underline;
}
.filter .reset a:visited {
  color: #004eff;
}

.date-picker {
  font-size: .75em;
}

.sub-nav h5, .sub-nav .filter h5, .my-content > a {
    color: #000;
    display: block;
    padding: .75em 0 .75em 25px;
}
.sub-nav h5 {
    padding: 0;
}
.my-content > a {
    padding-left: 25px;
    font-size: .8em;
}
.sub-nav h5:hover, .sub-nav .filter h5:hover, .my-content > a:hover {
    font-weight: bold;
    text-decoration: underline;
}
.sub-nav h5.active a {
    padding: 0;
}

.filter ul > li.group-label {
    border-left: none;
    border-right: none;
    border-top: none;
    font-weight: bold;
    margin-top: 2px;
}
.filter ul > li:first-of-type {
    border: none;
}
.filter li:nth-of-type(2) {
    border-top: 1px solid #d2def4;

}
.filter ul > li label {
	display: block;
	padding: .75em 0;
    vertical-align: middle;
}

.filter ul > li label:hover {
	cursor: pointer;
}

.my-content {
	margin: 0 0 1em;
}

.sub-nav > .filter {
    padding: 0;
}
.sub-nav > .filter h5 {
      margin: 0;
}
.filter h4, .sub-nav > h4 {
    background: url('../img/right-arrow.png') #f9f9f9 no-repeat 6px 50%;
    border: 1px solid #ccc;
    display: block;
    margin: 0;
    padding: .75em .75em .75em 25px;
}

.filter h4:hover, .sub-nav > h4:hover {
    cursor: pointer;
}

.filter h4 a {
    padding: 0;
}

.filter h4.open, .sub-nav > h4.open {
    background: url('../img/down-arrow.png') #f9f9f9 no-repeat 6px 50%;
    border-bottom: none;
}

.filter > fieldset, .sub-nav .filter > h5, .sub-nav > h5, .sub-nav h2, .archive {
    display: none;
}

/* * * * * * * * * * * * * * * * * * * * *
        CONTENT
* * * * * * * * * * * * * * * * * * * * * */
#featured {
    background: #fffcd0;
}
.featured {
    padding: 15px;
}

ul.tags {
    margin-top: 0;
}

#featured ul.tags {
    margin-top: .5em;
    padding-right: 3%;
}

#featured h3 {
    padding-right: 3%;
}

#featured p {
    font-size: 1.05em;
    margin-bottom: 0;
    padding-right: 3%;
}

#featured .notice p {
    margin: .25em 0;
}

h3.contributor {
    margin-bottom: 0;
}
.byline, .profession, .hometown, .my-web-site, .event {
    font-family: Arial, sans-serif;
    font-size: .924em;
}
.timestamp {
    float:right;
}

p.author-links {
  float: right;
  margin-top: 0;
}

br.author-links {
  clear: both;
}

main {
    padding: 0 1em;
}
.posts > li:not(:last-of-type) {
    border-bottom: 1px solid #DAE4F4;
    margin-bottom: 1em;
}

.post .image-wrapper p, .posts .image-wrapper p, #featured .image-wrapper p {
	color: #666;
	font-family: 'Arial', Arial, sans-serif;
	font-size: .5em;
}

/* Disabled for time being
.overlay {
	background-position: 50% 50%;
    display: block;
    height: 146px;
    position: absolute;
    width: 201px;
}
.overlay.video {
    background-image: url('../img/media-overlay-01.png');
}
.overlay.audio {
    background-image: url('../img/media-overlay-02.png');
}
.overlay.upload, .overlay.document {
    background-image: url('../img/media-overlay-03.png');
}
*/

main.single {
    padding-bottom: 1em;
}
main.single > .post > h3 {
    font-size: 1.185em;
}
main.single > .post > h3.my-content {
    font-size: 1em;
}

.blog .single p:not(.image-credit), .blog .single ol, .blog .single ul, .notices .single p:not(.image-credit), .notices .single ol, .notices .single ul, .letters .content p, .letters .content ol, .letters .content ul {
    color: #000;
    font-size: 1.1em;
    line-height: 1.5em;
}

.letters .content ul {
  list-style-type: disc;
}

.list-wrapper p, .post p, .list-wrapper li, .post li {
	text-align: justify;
}

.single iframe {
    width: 100%;
}
.help {
    border-bottom: 1px solid #C8D4E9;
    color: #676158;
    font-family: Arial, sans-serif;
    margin-bottom: 1em;
}

.help p {
    text-align: justify;
}

.help strong, .help b {
    color: #000;
}

.message {
	border-bottom: 1px solid #C8D4E9;
	font-family: Arial, sans-serif;
  padding: 1em 0;
}

.message p {
    margin: 0;
}

.coming-soon {
    border-bottom: 1px solid #C8D4E9;
    color: #000;
    font-family: Arial, sans-serif;
    font-size: 1.5em;
    font-weight: bold;
    padding: .5em 0 1em 0;
    text-align: center;
    text-transform: uppercase;
}
.website-link {
    border-top: 1px solid #C8D4E9;
    padding: 0 0 1em 0;
}
.attachments {
    border-bottom: 1px solid #C8D4E9;
    border-top: 1px solid #C8D4E9;
    padding: 1em 0;
}
.generic-tags {
    border-bottom: 1px solid #C8D4E9;
    padding: 1em 0;
}
.download a {
    background: url('../img/pdf-icon.png') 50% 0 scroll no-repeat;
}
.download:hover {
    cursor: pointer;
}
.download a, .video-link a {
    color: #333;
    display: block;
    padding-top: 4em;
    text-align: center;
}
.download a > span {
    display: none;
    font-size: .8em;
    text-transform: uppercase;
}
.download, .video-link {
    cursor: pointer;
    display: inline-block;
    vertical-align: top;
    width: 25%;
}

.video-link a {
    background: url('../img/video.png') 50% 0 scroll no-repeat;
    padding-left: .5em;
}

.whats-new {
	padding: 0 3%;
}

#comments {
    background: #f9f9f9;
    margin-bottom: 1em;
    padding: 0 20px;
}

.whats-new aside {
    display: none;
}

.whats-new aside > h2 {
    border-bottom: none;
    margin: 0;
    padding: 0 1em .1em;
}

.whats-new aside p {
    color: #000;
}

#comments li > p {
    font-size: .9em;
    margin: .5em 0;
}
#comments li > .user {
    text-align: right;
    display: block;
    margin-bottom: 1em;
}
ul.tags > li {
    display: inline-block;
    font-size: .8em;
    text-transform: uppercase;
}
#support, .notices-box, .filter {
    padding: 0 3%;
}
.filter ul {
    display: none;
    font-size: .9em;
}
.filter ul > li {
    border: 1px solid #d2def4;
    border-top: none;
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0 0 0 .75em;
}
.filter ul > li:last-of-type {
    margin-bottom: .5em;
}
.filter fieldset > h5 {
    cursor: pointer;
}
.filter input[type="checkbox"] {
	float: left;
	margin: 1em .5em 0 0;
}
/* ... */

